# iLink-voice-assistant-PoC

./: README.md  pyproject.toml
docker/: docker-compose.yml
docs/: PoC questions.md  architecture.md  estimate.md  problem statement.md
scratch/: gemini.ipynb  gtts.ipynb  minilm.ipynb  pymupdf.ipynb  pyttsx3.ipynb  qdrant.ipynb  whisper.ipynb
src/: llm.py  main.py  stt.py  tts.py
src/rag/: doc_loader.py  embeddings.py  indexer.py  store.py
